--- a/styles/menu.css
+++ b/styles/menu.css
@@ -157,10 +157,10 @@ body.menu-open .hamburger span:nth-child(3){
   background:var(--bg);
 }
 .theme-toggle-mobile .toggle-icon-sun{
-  color:#C9982E;
+  color:#A07A1A;
 }
 .theme-toggle-mobile .toggle-icon-moon{
-  color:#5A7088;
+  color:#4A5F73;
 }
 
 
